k8s/manifests/am-routing-tree/am-routing-tree.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: am-routing-tree-prometheus-docs
  labels:
    app.kubernetes.io/name: prometheus-docs
    app.kubernetes.io/instance: am-routing-tree
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: prometheus-docs
    app.kubernetes.io/instance: am-routing-tree
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: am-routing-tree-prometheus-docs-rewrite
  labels:
    app.kubernetes.io/name: prometheus-docs
    app.kubernetes.io/instance: am-routing-tree
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-docs
      app.kubernetes.io/instance: am-routing-tree
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-docs
        app.kubernetes.io/instance: am-routing-tree
    spec:
      serviceAccountName: am-routing-tree-prometheus-docs
      containers:
        - name: prometheus-docs
          image: "tr3mor1401/am-routing-tree:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: root-redirect
  labels:
    app.kubernetes.io/name: prometheus-docs
    app.kubernetes.io/instance: am-routing-tree
spec:
  replacePathRegex:
    regex: ^/$
    replacement: /webtools/alerting/routing-tree-editor/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: am-routing-tree-prometheus-docs
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-root-redirect@kubernetescrd
  labels:
    app.kubernetes.io/name: prometheus-docs
    app.kubernetes.io/instance: am-routing-tree
spec:
  ingressClassName: traefik
  rules:
    - host: "am-routing-tree.localdev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: am-routing-tree-prometheus-docs
                port:
                  number: 3000
